--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Version</td>
-                  <td>1.0.2    <a href="https://api.opendota.com/api" target="_blank">View changelog</a></td>
+                  <td>1.0.2    <a href="https://github.com/XiyanHu/Dota2-TeamHunter/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Data Source</td>
@@ -73,7 +73,7 @@
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Contribute</td>
-                  <td><a href="www.google.com" target="_blank">Star At Github</a></td>
+                  <td><a href="https://github.com/XiyanHu/Dota2-TeamHunter" target="_blank">Star At Github</a></td>
                 </tr>
               </tbody> 
           </table>
