--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="tab-pane" id="tab3">
     <div id ="aboutMeArea">
-      <div id = "aboutTitleArea"><p><img src="images/icon48.png"><span id="aboutTitle">    Dota2 TeamHunter    </span> <span id="versionNum">Version 1.0.2</span></p></div>
+      <div id = "aboutTitleArea"><p><img src="images/icon48.png"><span id="aboutTitle">    Dota2 TeamHunter    </span> <span id="versionNum">Version 1.0.3</span></p></div>
           <table class="table table-condensed">
              <tbody>
                 <tr>
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Version</td>
-                  <td>1.0.2    <a href="https://api.opendota.com/api" target="_blank">View changelog</a></td>
+                  <td>1.0.3    <a href="https://github.com/XiyanHu/Dota2-TeamHunter/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Data Source</td>
@@ -73,7 +73,7 @@
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Contribute</td>
-                  <td><a href="www.google.com" target="_blank">Star At Github</a></td>
+                  <td><a href="https://github.com/XiyanHu/Dota2-TeamHunter" target="_blank">Star At Github</a></td>
                 </tr>
               </tbody> 
           </table>
