--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a id = "refresh"><i class="fa fa-refresh" aria-hidden="true"></i></a></li>
         <li><a id = "aboutMe" href="#tab3" data-toggle="tab"><i class="fa fa-desktop" aria-hidden="true"></i>   About</a></li>  
       </ul>    
-      <div class="tab-content"> 
+      <div class="tab-content" id="wholeTable"> 
         <div class="tab-pane active" id="tab1">
           <div class="sk-wave" id="loading">
             <div class="sk-rect sk-rect1"></div>
@@ -47,7 +47,7 @@
     </div>
     <div class="tab-pane" id="tab3">
     <div id ="aboutMeArea">
-      <div id = "aboutTitleArea"><p><img src="images/icon48.png"><span id="aboutTitle">    Dota2 TeamHunter    </span> <span id="versionNum">Version 1.0.8</span></p></div>
+      <div id = "aboutTitleArea"><p><img src="images/icon48.png"><span id="aboutTitle">    Dota2 TeamHunter    </span> <span id="versionNum">Version 1.0.9</span></p></div>
           <table class="table table-condensed">
              <tbody>
                 <tr>
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Version</td>
-                  <td>1.0.8    <a href="https://github.com/XiyanHu/Dota2-TeamHunter/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
+                  <td>1.0.9    <a href="https://github.com/XiyanHu/Dota2-TeamHunter/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
                 </tr>
                 <tr>  
                   <td class="aboutCellHead">Data Source</td>
